# steam-deck-controller

./: .gitignore  .gitmodules  LICENSE  README.md  devbox.env  devbox.json
.run/: receiver.run.xml  transmitter.run.xml
2d-artwork/: steampad-diagram-illustrator.ai
3d-models/: BButton.3mf  DeckBody0.3mf  Dpad.3mf  Joystick.3mf  StartButton.3mf  SteamButton.3mf  Trackpad.3mf
electronics/: SDC_USB_Breakout.csv  SDC_USB_Breakout.kicad_pro  SDC_USB_Breakout.kicad_sch
electronics/SteamPadGerbers/: SDC_USB_Breakout-B_Cu.gbr  SDC_USB_Breakout-B_Mask.gbr  SDC_USB_Breakout-B_Paste.gbr  SDC_USB_Breakout-B_Silkscreen.gbr  SDC_USB_Breakout-Edge_Cuts.gbr  SDC_USB_Breakout-F_Cu.gbr  SDC_USB_Breakout-F_Mask.gbr  SDC_USB_Breakout-F_Paste.gbr  SDC_USB_Breakout-F_Silkscreen.gbr  SDC_USB_Breakout-NPTH.drl  SDC_USB_Breakout-PTH.drl  SDC_USB_Breakout-job.gbrjob
firmware/: CMakeLists.txt  README.md  pico-openocd.cfg  pio_usb_import.cmake  project.yml
firmware/apps/receiver/: pkg.yml
firmware/apps/receiver/src/: main.c
firmware/receiver/: CMakeLists.txt  btstack_config.h  receiver.c
firmware/targets/receiver/: pkg.yml  target.yml
firmware/transmitter/: CMakeLists.txt  transmitter.c
models/: AButton.3mf
research/: Controller_Boards.md
